apps/example-python-test-15/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-python-test-15
  namespace: dev
  labels:
    backstage.io/kubernetes-id: example-python-test-15
    environment: dev
spec:
  selector:
    app: example-python-test-15
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
 


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: example-python-test-15-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: example-python-test-15.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: example-python-test-15
#             port:
#               number: 80
